plang/testing/logs/false-incorrect/52/program52.p.p.out
Error at kmtP5 (Ozus) (zdxid (VYyn)) ycdgc l :- ((d4iu (XeC1y) (ZuyzM) RHhl)).:16:38 error: 
kmtP5 (Ozus) (zdxid (VYyn)) ycdgc l :- ((d4iu (XeC1y) (ZuyzM) RHhl)).
                                     ^
Error at kmtP5 (Ozus) (zdxid (VYyn)) ycdgc l :- ((d4iu (XeC1y) (ZuyzM) RHhl)).:16:66 error: 
kmtP5 (Ozus) (zdxid (VYyn)) ycdgc l :- ((d4iu (XeC1y) (ZuyzM) RHhl)).
                                                                 ^