plang/testing/logs/false-incorrect/52/program52.p.p
nvp XVu :- c k Y (xU); iAW10 (zHo6 d2 ySw2r) Q Q2osc fqN8; (o3 A7nQ); g Fl (ehQI (d2VL) F0 y), uR8 C RM2a (mj (wh7T KSeP rOY (S) (xYk KA))) t7, (dFTu9 (L0G) (jgTi (rTNAG (tTt) (kL5 (smY (zG3C (QO0jy))) r7xOk)) (rTMI)) (E5w), wM2yA (P3p) f0 Jzz), y Cegk, dQ1 Nnj uoqH s4; wS (E4Al), hHScY A (FxUh) fI; (gzu J9p42 k9O9; (oDe (qgx P); iVpi)).
wodS (P) k.


eB (oS (Mi)) (UW) ew s7Bk.


eZ0q (PC9L).


rFVQz (RY2) PvgpG (te5 (pN FS9xF z (Ty8u) uN) tFO A kZ) XEl0L.

c o.


kmtP5 (Ozus) (zdxid (VYyn)) ycdgc l :- ((d4iu (XeC1y) (ZuyzM) RHhl)).
yLi FrU D8F4.

npaQ.


? uAw7; ouD2g (dl (qQ (c8o3) (q5) (rqKZE Ne))) (Yg02p) nt (jW (n) (u (hH) (vq7H)) ATq); (n (DCk) ULhS DKOR).


